--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,82 +4,88 @@
 }
 
 *{
-    margin: 0;/*обнуление отступов*/
-    padding: 0;/*обнуление полей*/
-    box-sizing: border-box;/*метод расчета размеров бокса*/
-    font-family: 'Poppins', sans-serif;/*название шрифта*/
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 body {
-    display: flex;/*флексбокс сетка*/
-    flex-direction: column;/*направление главной оси*/
-    justify-content: flex-end;/*элементы в конце контейнера*/
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
     min-height: 100vh;
 }
 
 .login-form {
-    max-width: 400px; /* Максимальная ширина формы */
-    margin: 20px auto; /* Центрирование формы */
-    padding: 20px; /* Поля внутри формы */
-    background-color: #fff; /* Фон формы */
-    border-radius: 8px; /* Закругление углов */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Тень для формы */
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .registration-form {
-    max-width: 400px; /* Максимальная ширина формы */
-    margin: 20px auto; /* Центрирование формы */
-    padding: 20px; /* Поля внутри формы */
-    background-color: #fff; /* Фон формы */
-    border-radius: 8px; /* Закругление углов */
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Тень для формы */
+    max-width: 400px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 .form-group {
-    margin-bottom: 15px; /* Отступ между полями */
+    margin-bottom: 15px;
 }
 
 .form-group label {
-    display: block; /* Блочный элемент для метки */
-    margin-bottom: 5px; /* Отступ под меткой */
+    display: block;
+    margin-bottom: 5px;
 }
 
 .form-group input {
-    width: 100%; /* Ширина поля ввода на всю ширину родителя */
-    padding: 10px; /* Поля внутри поля ввода */
-    border: 1px solid #ccc; /* Цвет рамки поля ввода */
-    border-radius: 4px; /* Закругление углов поля ввода */
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
 }
 
 .btn-link {
-    background-color: #3586ff; /* Цвет кнопки */
-    color: #fff; /* Цвет текста кнопки */
-    padding: 10px 15px; /* Поля внутри кнопки */
-    border: none; /* Без рамки */
-    border-radius: 4px; /* Закругление углов кнопки */
-    cursor: pointer; /* Курсор при наведении на кнопку */
+    background-color: #3586ff;
+    color: #fff;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .btn-link:hover {
-    background-color: #2a6bbf; /* Темнее при наведении */
+    background-color: #2a6bbf;
 }
 
 .custom-container {
-    background-color: white; /* Цвет фона контейнера */
-    border: 1px solid #dee2e6; /* Обводка контейнера */
-    border-radius: 8px; /* Закругленные углы */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Тень для контейнера */
-    padding: 20px; /* Внутренние отступы */
+    background-color: white;
+    border: 1px solid #dee2e6;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
 }
 
 .custom-card {
-    background-color: white; /* Цвет фона карточки */
-    padding: 20px; /* Отступы внутри карточки */
-    border-radius: 8px; /* Закругленные углы */
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Легкая тень */
-    border: 1px solid #dee2e6; /* Обводка карточки */
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: 1px solid #818486;
+    border-radius: 8px;
+    transition: transform 0.2s;
 }
 
 .text-muted {
-    color: rgba(0, 0, 0, 0.6); /* Цвет текста для описания */
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.custom-card:hover {
+    transform: scale(1.05);
 }
